--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-  <h2>Main Page</h2>
-
-  Main content goes here. 
+<head>
+  <meta http-equiv="refresh" content="0; URL='http://gre
+merritt.herokuapp.com/about'" />
+</head
